redpanda/migrator: update 'performance tuning for high throughput' docs
The max_yield_batch_bytes must match max_message_bytes. Setting partition_buffer_bytes too high decreases performance.

--- a/docs/modules/components/pages/inputs/redpanda.adoc
+++ b/docs/modules/components/pages/inputs/redpanda.adoc
@@ -906,7 +906,7 @@ The period of time between each topic lag refresh cycle.
 
 === `max_yield_batch_bytes`
 
-The maximum size (in bytes) for each batch yielded by this input. When routed to a redpanda output without modification this would roughly translate to the batch.bytes config field of a traditional producer.
+The maximum size (in bytes) for each batch yielded by this input. This value must be less than or equal to the `partition_buffer_bytes`. If using Redpanda output, this value should not be greater than the `max_message_bytes` option value (1MB by default), and for high-throughput scenarios they should be equal.
 
 
 *Type*: `string`
