redpanda/migrator: add max_in_flight

--- a/docs/modules/components/pages/outputs/redpanda_migrator.adoc
+++ b/docs/modules/components/pages/outputs/redpanda_migrator.adoc
@@ -62,6 +62,7 @@ output:
     topic: ${! @kafka_topic }
     topic_replication_factor: "3" # No default (optional)
     sync_topic_acls: false
+    max_in_flight: 10
 ```
 
 --
@@ -148,6 +149,7 @@ output:
     sync_topic_acls: false
     serverless: false
     provenance_header: redpanda-migrator-provenance
+    max_in_flight: 10
 ```
 
 --
@@ -164,7 +166,14 @@ the mapping between input and output components is done based on the label field
 The label of the input and output must match exactly for proper coordination.
 
 **Performance tuning for high throughput:** For workloads with high message rates or large messages, 
-adjust buffer sizes on the paired input component to improve throughput. See the input documentation for details.
+adjust the following settings to optimize throughput:
+
+On the paired input component:
+- `partition_buffer_bytes: 2MB` - increases per-partition buffer size
+- `max_yield_batch_bytes: 1MB` - allows larger batches to be yielded
+
+On this output component:
+- `max_in_flight` - set to the total number of partitions being copied in parallel (up to all partitions in the cluster)
 
 What gets synchronised:
 
@@ -1554,5 +1563,22 @@ Header name to add to migrated records indicating their source cluster. If empty
 *Type*: `string`
 
 *Default*: `"redpanda-migrator-provenance"`
+
+=== `max_in_flight`
+
+Maximum number of batches to have in flight at any given time. For optimal throughput, set this to the total number of partitions being copied in parallel (up to all partitions in the cluster). Setting it higher than the number of consumed partitions is ineffective.
+
+
+*Type*: `int`
+
+*Default*: `10`
+
+```yml
+# Examples
+
+max_in_flight: '64  # For a cluster with 64 partitions'
+
+max_in_flight: '128 # For multiple topics with combined 128 partitions'
+```
 
 
