--- a/docs/modules/components/pages/outputs/redpanda_migrator.adoc
+++ b/docs/modules/components/pages/outputs/redpanda_migrator.adoc
@@ -42,6 +42,7 @@ output:
     seed_brokers: [] # No default (required)
     schema_registry:
       url: http://localhost:8081 # No default (required)
+      timeout: 5s
       enabled: true
       interval: 5m
       include: [] # No default (optional)
@@ -104,6 +105,7 @@ output:
     broker_write_max_bytes: 100MiB
     schema_registry:
       url: http://localhost:8081 # No default (required)
+      timeout: 5s
       tls:
         enabled: false
         skip_cert_verify: false
@@ -970,6 +972,15 @@ url: http://localhost:8081
 
 url: https://schema-registry.example.com:8081
 ```
+
+=== `schema_registry.timeout`
+
+HTTP client timeout for schema registry requests.
+
+
+*Type*: `string`
+
+*Default*: `"5s"`
 
 === `schema_registry.tls`
 
