kafka: add redpanda cloud service account as authn mechanism

--- a/docs/modules/components/pages/tracers/redpanda.adoc
+++ b/docs/modules/components/pages/tracers/redpanda.adoc
@@ -318,6 +318,8 @@ The SASL mechanism to use.
 | OAuth Bearer based authentication.
 | `PLAIN`
 | Plain text authentication.
+| `REDPANDA_CLOUD_SERVICE_ACCOUNT`
+| Redpanda Cloud Service Account authentication when running in Redpanda Cloud.
 | `SCRAM-SHA-256`
 | SCRAM based authentication as specified in RFC5802.
 | `SCRAM-SHA-512`
