--- a/docs/modules/components/pages/processors/couchbase.adoc
+++ b/docs/modules/components/pages/processors/couchbase.adoc
@@ -66,6 +66,7 @@ couchbase:
   timeout: 15s
   id: ${! json("id") } # No default (required)
   content: "" # No default (optional)
+  ttl: "" # No default (optional)
   operation: get
 ```
 
@@ -187,6 +188,14 @@ id: ${! json("id") }
 === `content`
 
 Document content.
+
+
+*Type*: `string`
+
+
+=== `ttl`
+
+An optional TTL to set for items.
 
 
 *Type*: `string`
