--- a/docs/modules/components/pages/outputs/couchbase.adoc
+++ b/docs/modules/components/pages/outputs/couchbase.adoc
@@ -235,6 +235,10 @@ Couchbase operation to perform.
 |===
 | Option | Summary
 
+| `decrement`
+| decrement a counter by the value in content.
+| `increment`
+| increment a counter by the value in content.
 | `insert`
 | insert a new document.
 | `remove`
