--- a/docs/modules/components/pages/inputs/postgres_cdc.adoc
+++ b/docs/modules/components/pages/inputs/postgres_cdc.adoc
@@ -222,6 +222,9 @@ If set to true, creates a temporary replication slot that is automatically dropp
 
 The name of the PostgreSQL logical replication slot to use. If not provided, a random name will be generated. You can create this slot manually before starting replication if desired.
 
+Note: To avoid needing to grant the replication user permission to create publications, you can manually create the publications ahead of time.
+This connector uses the naming pattern `pglog_stream_<replication_slot_name>`, so be sure to create them using this convention.
+
 
 *Type*: `string`
 
